# fmp

./: .gitignore  README.md  pyproject.toml
fmp/: __init__.py  main.py
fmp/schema/: __init__.py  company_profile.py  general_search_input.py  search_element.py
fmp/utils/: __init__.py  load_api_key.py
tests/: test_company_search.py  test_fmp.py
tests/test_schema/: test_company_profile.py  test_general_search_input.py  test_serch_element.py
